--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@types/react-dom": "^18.2.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-multi-carousel": "^2.8.4",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^8.1.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "swiper": "^11.0.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
